--- a/assets/custom.css
+++ b/assets/custom.css
@@ -29,6 +29,9 @@
 width: 35%;
 }
 
-body {
-    margin: 0;
+ *{margin:0;padding:0;} body {margin: 0;} header {margin: 0; top:0;}
+
+.DateInput, .DateInput_1 {
+  width: 40%; /* replace with whatever length you prefer */
 }
+
